--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -21,7 +21,7 @@
     <h1>Olá, mundo!</h1> <!-- comentátio em HTML-->
     <p>Já me livrei da maldição...</p>
     <script>
-        var nome = window.prompt('Qual é o seu nome?') // pergunta o nome popup
+        var nome = prompt('Qual é o seu nome?') // pergunta o nome popup
         window.alert('É um grande prazer te conhecer, ' + nome + "!") // Concatenação
     </script>
 </body>
