--- a/aula06/ex004.html
+++ b/aula06/ex004.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Escrevendo na tela</title>
 </head>
 <body>
     
     <script>
         var nome = window.prompt('Digite seu nome:')
-        document.write(`seu nome tem ${nome.length} letras!`)
+        var n1 = Number(1400)
+        document.write(`Olá, ${nome} seu nome tem ${nome.length} letras!<br>`)
+        document.write(`Seu nome em maiúscula é ${nome.toUpperCase()}<br>`)
+        document.write(`O valor do computador foi ${n1.toLocaleString('pt-BR', {style: 'currency', currency: 'BRL'})}`)
     </script>
 </body>
 </html>
