--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -21,10 +21,10 @@
     <h1>Olá, mundo!</h1> <!-- comentátio em HTML-->
     <p>Já me livrei da maldição...</p>
     <script>
-        var n1 = Number(window.prompt('Digite uma caceta de um número:'))
+        var n1 = Number(window.prompt('Digite um número:'))
         var n2 = Number(window.prompt('Digite outro número:'))
         var s = n1 + n2
-        window.alert(`A soma entre ${n1} e ${n2} é: ${s.toString()}`)
+        window.alert(`A soma entre ${n1} e ${n2} é: ${s}`)
     </script>
 </body>
 </html>
