--- a/aula10/ex006.html
+++ b/aula10/ex006.html
@@ -8,12 +8,14 @@
     <style>
         div#area{
             font: normal 20pt Arial;
-            background: rgb(2, 248, 43);
+            background: rgb(0, 0, 0);
             color: rgb(217, 250, 71);
             width: 200px;
             height: 200px;
             line-height: 200px;
             text-align: center;
+            border-radius: 20px;
+            box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.397);
         }
     </style>
 </head>
@@ -39,7 +41,7 @@
 
         function sair(){
             a.innerText = 'saiu'
-            a.style.background = 'rgb(2, 248, 43)'
+            a.style.background = 'darkred'
         }
 
     </script>
