--- a/aula11/ex010.html
+++ b/aula11/ex010.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <h1>Sistema de multa</h1>
-    <p>Velocidade do carro: <input type="number" name="txtvel" id="txtvel"> km/h</p>
+    <p>Velocidade do carro: <input type="number" name="vel" id="vel"> km/h</p>
     <input type="button" value="Verificar" onclick="calcular()">
     <div id= "res">
 
@@ -22,7 +22,7 @@
     
     <script>
         function calcular(){
-            var txtv = window.document.querySelector('input#txtvel')
+            var txtv = window.document.querySelector('input#vel')
             var res = window.document.querySelector('div#res')
             var vel = Number(txtv.value)
             res.innerHTML = `<p>Sua velocidade é de <strong>${vel}</strong> km/h.</p>`
