--- a/aula11/ex009.html
+++ b/aula11/ex009.html
@@ -28,7 +28,7 @@
             if (txtp.value != 'Brasil'){
                 p.innerHTML = `Você atualmente vive em ${txtp.value}, tu é estrangeiro mané!`
             }else{
-                nac.innerHTML = `Se tu vive no Brasil tu é brasileiro né! dããããã.`
+                p.innerHTML = `Se tu vive no Brasil tu é brasileiro né! dããããã.`
             }
                         
         }
