início exercício idade e sexo

--- a/aula12ex/ex014/ex014.html
+++ b/aula12ex/ex014/ex014.html
@@ -17,7 +17,7 @@
             
         </div>
         <div id="imagem">
-            <img src="tarde.png" alt="imagem do dia">
+            <img id="foto" src="tarde.png" alt="imagem do dia">
         </div>
     </section>
     <footer>
