--- a/aula12ex/modelo/ex015.html
+++ b/aula12ex/modelo/ex015.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelo de exercício</title>
-    <link rel="stylesheet" href="estilos/styleex14.css">
-    <script src="scriptex14.js"></script>
+    <link rel="stylesheet" href="estilos/styleex15.css">
+    <script src="scriptex15.js"></script>
 </head>
 <body>
     <header>
-        <h1>Hora do dia</h1>
+        <h1>Verificador de idade</h1>
     </header>
     <section>
         <div id="texto">
