--- a/aula12ex/ex015/ex015.html
+++ b/aula12ex/ex015/ex015.html
@@ -6,35 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelo de exercício</title>
     <link rel="stylesheet" href="estilos/styleex15.css">
-    <script src="scriptex14.js"></script>
+    <script src="scriptex15.js"></script>
 </head>
-<body onload="carregar()">
+<body>
     <header>
         <h1>Verificador de Idade</h1>
     </header>
     <section>
         <div id="texto">
             <p>
-                <label for="iano" >Ano de Nascimento: </label>
-                <input type="number" name="ano" id="iano" required min="1922"
-                max="2022">
+                Ano de Nascimento:
+                <input type="number" name="ano" id="iano" min="1922"
+                max="2022" required>
             </p>
             <p>
                 Sexo: 
-                <input type="radio" name="sexo" value="M" id="imas" required checked>
+                <input type="radio" name="sexo" id="imas" checked>
                 <label for="imas" >Masculino</label>
 
-                <input type="radio" name="sexo" value="F" id="ifem">
+                <input type="radio" name="sexo" id="ifem">
                 <label for="ifem" >Feminino</label>
             </p>
             <p>
-                <input type="button" value="Verificar">
+                <input type="button" value="Verificar" onclick="carregar()">
             </p>
         </div>
         <div id="imagem">
-            <p>
-                <label id="ridade" for="iidade">Detectamos</label> 
-                <output name="idade" id="iidade"></output>
+            <p> 
+                <output id="ridade" name="idade" id="iidade">Preencha os dados acima para ver o resultado.</output>
             </p>
 
             <img id="img" src="">
