--- a/aula12ex/ex015/ex015.html
+++ b/aula12ex/ex015/ex015.html
@@ -17,7 +17,7 @@
             <p>
                 Ano de Nascimento:
                 <input type="number" name="ano" id="iano" min="1922"
-                max="2022" required>
+                max="2022">
             </p>
             <p>
                 Sexo: 
