--- a/aula12ex/ex015/ex015.html
+++ b/aula12ex/ex015/ex015.html
@@ -31,12 +31,8 @@
                 <input type="button" value="Verificar" onclick="carregar()">
             </p>
         </div>
-        <div id="imagem">
-            <p> 
-                <output id="ridade" name="idade" id="iidade">Preencha os dados acima para ver o resultado.</output>
-            </p>
-
-            <img id="img" src="">
+        <div id="saida">
+            Preencha os dados acima para ver o resultado.
         </div>
     </section>
     <footer>
