--- a/aula14ex/ex016/ex016.html
+++ b/aula14ex/ex016/ex016.html
@@ -31,7 +31,7 @@
             </p>
         </div>
         <div id="saida">
-            Mundo
+            iniciando a contagem...
         </div>
     </section>
     <footer>
